--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="section">
         <h1>Password Generator</h1>
         <div class="mid">
-            <p id="put-password" style="text-align: center;background-color: rgb(0, 79, 53);color:white;"></p>
+            <p id="put-password" style="text-align: center;background-color: rgb(42, 147, 112);color:white;font-size:20px;"></p>
             <p><input type="text" id="get-length" placeholder="enter the length"></p>
             <p><input type="checkbox" id="upper">Include Upper cases</p>
             <p><input type="checkbox" id="lower">Include Lower cases</p>
